# serializer version: 1
# name: test_victron_acload_sensor
  _CallList([
    _Call(
      tuple(
        list([
          VictronSensor(VictronBaseEntity(device=AC Load, unique_id=sensor.victron_mqtt_123_acload_0_acload_current, metric=acload_current, translation_key=acload_current, translation_placeholders={'installation_id': '123', 'device_id': '0'}), native_value=5.2),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_battery_sensor
  _CallList([
    _Call(
      tuple(
        list([
          VictronSensor(VictronBaseEntity(device=Battery, unique_id=sensor.victron_mqtt_123_battery_0_battery_current, metric=battery_current, translation_key=battery_current, translation_placeholders={'installation_id': '123', 'device_id': '0'}), native_value=10.5),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_binary_sensor
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=EV Charging Station, unique_id=binary_sensor.victron_mqtt_123_evcharger_0_evcharger_connected, metric=evcharger_connected, translation_key=evcharger_connected, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_button
  _CallList([
    _Call(
      tuple(
        list([
          VictronButton(VictronBaseEntity(device=Victron Venus, unique_id=button.victron_mqtt_123_system_0_platform_device_reboot, metric=platform_device_reboot, translation_key=platform_device_reboot, translation_placeholders={'installation_id': '123', 'device_id': '0'})),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_inverter_select
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Inverter, unique_id=select.victron_mqtt_123_inverter_0_inverter_mode, metric=inverter_mode, translation_key=inverter_mode, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_multi_ess_sensor
  _CallList([
    _Call(
      tuple(
        list([
          VictronSensor(VictronBaseEntity(device=Multi RS Solar, unique_id=sensor.victron_mqtt_123_multi_0_multirssolar_ess_mode, metric=multirssolar_ess_mode, translation_key=multirssolar_ess_mode, translation_placeholders={'installation_id': '123', 'device_id': '0'}), native_value=self consumption),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_number
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=EV Charging Station, unique_id=number.victron_mqtt_123_evcharger_0_evcharger_set_current, metric=evcharger_set_current, translation_key=evcharger_set_current, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_pvinverter_sensor
  _CallList([
    _Call(
      tuple(
        list([
          VictronSensor(VictronBaseEntity(device=PV Inverter, unique_id=sensor.victron_mqtt_123_pvinverter_0_pvinverter_power_total, metric=pvinverter_power_total, translation_key=pvinverter_power_total, translation_placeholders={'installation_id': '123', 'device_id': '0'}), native_value=2500.0),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_select
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=EV Charging Station, unique_id=select.victron_mqtt_123_evcharger_0_evcharger_mode, metric=evcharger_mode, translation_key=evcharger_mode, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_sensor_basic
  _CallList([
    _Call(
      tuple(
        list([
          VictronSensor(VictronBaseEntity(device=Grid, unique_id=sensor.victron_mqtt_123_grid_30_grid_energy_forward_L1, metric=grid_energy_forward_L1, translation_key=grid_energy_forward_phase, translation_placeholders={'installation_id': '123', 'device_id': '30', 'phase': 'L1', 'next_phase': 'L2'}), native_value=42.0),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_sensor_complex
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Victron Venus, unique_id=select.victron_mqtt_123_system_0_system_ess_schedule_charge_2_days, metric=system_ess_schedule_charge_2_days, translation_key=system_ess_schedule_charge_slot_days, translation_placeholders={'installation_id': '123', 'device_id': '0', 'slot': '2'}),
        ]),
      ),
      dict({
      }),
    ),
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Victron Venus, unique_id=switch.victron_mqtt_123_system_0_system_ess_schedule_charge_2_enabled, metric=system_ess_schedule_charge_2_enabled, translation_key=system_ess_schedule_charge_slot_enabled, translation_placeholders={'installation_id': '123', 'device_id': '0', 'slot': '2'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_solarcharger_number
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Solar Charger, unique_id=binary_sensor.victron_mqtt_123_solarcharger_0_solarcharger_load_state, metric=solarcharger_load_state, translation_key=solarcharger_load_state, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_switch
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Generator, unique_id=switch.victron_mqtt_123_generator_0_generator_manual_start, metric=generator_manual_start, translation_key=generator_manual_start, translation_placeholders={'installation_id': '123', 'device_id': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_victron_time
  _CallList([
    _Call(
      tuple(
        list([
          VictronBaseEntity(device=Victron Venus, unique_id=time.victron_mqtt_123_system_0_system_ess_schedule_charge_0_start, metric=system_ess_schedule_charge_0_start, translation_key=system_ess_schedule_charge_slot_start, translation_placeholders={'installation_id': '123', 'device_id': '0', 'slot': '0'}),
        ]),
      ),
      dict({
      }),
    ),
  ])
# ---
